--- a/1/index.html
+++ b/1/index.html
@@ -17,14 +17,19 @@
       <svg viewBox="0 0 550 200">
       </svg>
     </figure>
-    <footer xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
+    <footer xmlns:dct="http://purl.org/dc/terms/"
+            xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
       <a rel="license"
          style="float:left;width:100px;margin-right:1em"
          href="http://creativecommons.org/publicdomain/zero/1.0/">
-        <img src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none" alt="CC0" />
+        <img src="http://i.creativecommons.org/p/zero/1.0/88x31.png"
+              style="border-style: none" alt="CC0" />
       </a>
-      This page is in the <a href="https://creativecommons.org/publicdomain/zero/1.0/">public domain</a>.
-      Use it as you wish. Attribution is not necessary, but appreciated.
+      This page is in the
+      <a href="https://creativecommons.org/publicdomain/zero/1.0/">
+        public domain</a>.
+      Use it as you wish. Attribution is not necessary,
+      but appreciated.
     </footer>
   </body>
 </html>
