--- a/2/index.html
+++ b/2/index.html
@@ -9,7 +9,10 @@
   <body>
     <figure id="diagram">
       <svg viewBox="0 0 550 200">
-        <rect width="22" height="22" fill="white" stroke="gray" />
+        <rect
+            x="0" y="0"
+            width="22" height="22"
+            fill="white" stroke="gray" />
       </svg>
     </figure>
   </body>
