Feat: show algorithm output, and js code; add highlighting for js

--- a/5/index.html
+++ b/5/index.html
@@ -12,7 +12,10 @@
         <rect v-for="{x,y} in positions"
               :x="x * scale + 1/2" :y="y * scale + 1/2"
               :width="scale-1" :height="scale-1"
-              fill="hsl(250, 10%, 93%)" />
+              :fill="insideCircle(center, {x, y}, radius)
+                     ? 'hsl(0, 30%, 60%)'
+                     : 'hsl(250, 10%, 93%)'"
+        />
       </svg>
     </figure>
   </body>
