Style: use q,r vs x,y names; use v * scale not scale * v
Rationale: q,r for grid coordinates vs x,y for diagram coordinates
makes it less likely that we'll mix them up.

Rationale: I had been inconsistent in using v * scale some places and
scale * v some places. But I *talk* about "multiplying by scale" and
that seems more natural with v * scale. It also matches the later v /
scale operation.

--- a/3/index.html
+++ b/3/index.html
@@ -9,8 +9,8 @@
   <body>
     <figure id="diagram">
       <svg viewBox="0 0 550 220">
-        <rect v-for="{x,y} in positions"
-              :x="x * scale" :y="y * scale"
+        <rect v-for="{q, r} in positions"
+              :x="q * scale" :y="r * scale"
               :width="scale" :height="scale"
               fill="white" stroke="gray" />
       </svg>
