--- a/10/index.html
+++ b/10/index.html
@@ -9,15 +9,15 @@
   <body>
     <figure id="diagram">
       <svg viewBox="0 0 550 220">
-        <rect v-for="{x,y} in positions"
-              :x="x * scale + 1/2" :y="y * scale + 1/2"
+        <rect v-for="{q, r} in positions"
+              :x="q * scale + 1/2" :y="r * scale + 1/2"
               :width="scale-1" :height="scale-1"
-              :fill="insideCircle(center, {x, y}, radius)
+              :fill="insideCircle(center, {q, r}, radius)
                      ? 'hsl(0, 30%, 60%)'
                      : 'hsl(250, 10%, 93%)'"
         />
         <drag-handle v-model="centerPosition"
-                     color="yellow" :size="scale * 0.4" />
+                     color="yellow" :size="0.4 * scale" />
       </svg>
       <label>
         radius =
