--- a/12/index.html
+++ b/12/index.html
@@ -9,23 +9,23 @@
   <body>
     <figure id="diagram">
       <svg viewBox="0 0 550 220">
-        <rect v-for="{x,y} in positions"
-              :x="x * scale + 1/2" :y="y * scale + 1/2"
+        <rect v-for="{q, r} in positions"
+              :x="q * scale + 1/2" :y="r * scale + 1/2"
               :width="scale-1" :height="scale-1"
-              :fill="insideCircle(center, {x, y}, radius)
+              :fill="insideCircle(center, {q, r}, radius)
                      ? 'hsl(0, 30%, 60%)'
                      : 'hsl(250, 10%, 93%)'"
         />
-        <text v-for="{x, y} in positions"
+        <text v-for="{q, r} in positions"
               :font-size="0.5 * scale"
-              :x="(x + 1/2) * scale" text-anchor="middle"
-              :y="y * scale" :dy="0.6 * scale">
-          {{Math.hypot(x-center.x, y-center.y).toFixed(1)}}
+              :x="(q + 1/2) * scale" text-anchor="middle"
+              :y="r * scale" :dy="0.6 * scale">
+          {{Math.hypot(q-center.q, r-center.r).toFixed(1)}}
         </text>
         <drag-handle v-model="centerPosition"
-                     color="yellow" :size="scale * 0.4" />
+                     color="yellow" :size="0.4 * scale" />
         <drag-handle v-model="radiusPosition"
-                     color="white" :size="scale * 0.3" />
+                     color="white" :size="0.3 * scale" />
       </svg>
       <label>
         radius =
