--- a/13/index.html
+++ b/13/index.html
@@ -31,6 +31,12 @@
                      ? 'hsl(0, 30%, 60%)'
                      : 'hsl(250, 10%, 93%)'"
         />
+        <text v-for="{q, r} in positions"
+              :font-size="0.5 * scale"
+              :x="(q + 1/2) * scale" text-anchor="middle"
+              :y="r * scale" :dy="0.6 * scale">
+          {{Math.hypot(q-center.q, r-center.r).toFixed(1)}}
+        </text>
         <drag-handle v-model="centerPosition"
                      color="yellow" :size="0.4 * scale" />
         <drag-handle v-model="radiusPosition"
