--- a/7/index.html
+++ b/7/index.html
@@ -32,9 +32,9 @@
       <label>
         radius =
         <input v-model.number="radius"
-               type="range" min="1" max="8" />
+               type="range" min="1" max="8" step="0.1" />
         <input v-model.number="radius"
-               type="number" min="1" max="8" size="3" />
+               type="number" min="1" max="8" step="0.1" size="3" />
       </label>
     </figure>
   </body>
