Feat: improve diagram appearance to focus on distances

--- a/9/index.html
+++ b/9/index.html
@@ -22,7 +22,7 @@
                 @pointerup="pointerUp"
                 @pointercancel="pointerUp"
                 @pointermove="moveCenter"
-                :y="0.4 * scale"
+                :r="0.4 * scale"
                 :cx="(center.q + 1/2) * scale"
                 :cy="(center.r + 1/2) * scale" />
       </svg>
