Feat: measure lines
* Also fixed a bug in the highlighting that didn't allow numerals in
  the attribute names. Needed for <line :x1="…">
* Also fixed some links.

--- a/1/index.html
+++ b/1/index.html
@@ -21,8 +21,8 @@
             xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
       <a rel="license"
          style="float:left;width:100px;margin-right:1em"
-         href="http://creativecommons.org/publicdomain/zero/1.0/">
-        <img src="http://i.creativecommons.org/p/zero/1.0/88x31.png"
+         href="https://creativecommons.org/publicdomain/zero/1.0/">
+        <img src="https://i.creativecommons.org/p/zero/1.0/88x31.png"
               style="border-style: none" alt="CC0" />
       </a>
       This page is in the
