--- a/18/index.html
+++ b/18/index.html
@@ -6,17 +6,16 @@
     <link rel="stylesheet" href="../pagestyle.css">
     <script type="module" src="circle-drawing.js"></script>
     <style>
-        #diagram-bounding-box .grid rect               { fill: white; stroke: hsl(250 10% 97%); }
-        #diagram-bounding-box .grid.inside-bounds rect { fill: hsl(250 10% 93%); }
-        #diagram-bounding-box .grid.inside-circle rect { fill: hsl(60 10% 93%); }
-        #diagram-bounding-box .grid text               { fill: none; }
-        #diagram-bounding-box .grid.inside-bounds text { fill: hsl(250 20% 50%); }
-        #diagram-bounding-box .grid.inside-circle text { fill: hsl(60 40% 20%); font-weight: bold; }
+      #diagram-distances rect { stroke: white; stroke-width: 0.05px; }
+      #diagram-distances .inside rect { fill: hsl(60 10% 93%); }
+      #diagram-distances .outside rect { fill: hsl(250 10% 93%); }
+      #diagram-distances .inside text { fill: hsl(60 40% 20%); font-weight: bold; }
+      #diagram-distances .outside text { fill: hsl(250 20% 50%); }
     </style>
   </head>
   <body>
-    <figure id="diagram-bounding-box">
-      <svg viewBox="0 0 396 220">
+    <figure id="diagram-distances">
+      <svg :view-box.camel="`-0.5 -0.5 ${gridCols} ${gridRows}`">
         <defs>
           <marker id="arrowhead" viewBox="0 0 10 10" 
                   refX="7" refY="5" markerUnits="strokeWidth"
@@ -25,35 +24,39 @@
           </marker>
         </defs>
         <g v-for="{q, r} in positions"
-           :transform="`translate(${(q+1/2)*scale},${(r+1/2)*scale})`"
-           :class="{grid: true,
-                  'inside-circle': insideCircle(center, {q, r}, radius),
-                  'inside-bounds': insideBounds({q, r})}">
+           :transform="`translate(${q},${r})`"
+           :class="insideCircle(center, {q, r}, radius)? 'inside' : 'outside'">
           <rect
-              :x="-scale/2 + 1/2" :y="-scale/2 + 1/2"
-              :width="scale-1" :height="scale-1" />
+              :x="-1/2" :y="-1/2"
+              :width="1" :height="1" />
           <text
-              :font-size="0.45 * scale"
+              :font-size="0.45"
               text-anchor="middle"
-              :dy="0.15 * scale">
+              :dy="0.15">
             {{distanceLabel(q, r)}}
           </text>
         </g>
-        <rect :x="(bbox.left + 1/2) * scale"
-              :y="(bbox.top + 1/2) * scale"
-              :width="(bbox.right - bbox.left) * scale"
-              :height="(bbox.bottom - bbox.top) * scale"
-              fill="none" rx="1.5"
-              stroke="hsl(0 50% 50%)" stroke-dasharray="5,0.5" />
         <circle
-            :cx="(center.q + 1/2) * scale"
-            :cy="(center.r + 1/2) * scale"
-            :r="radius * scale"
-            fill="none" stroke="hsl(60 10% 50%)" />
+            :cx="center.q"
+            :cy="center.r"
+            :r="radius"
+            fill="none" stroke="hsl(60 10% 50%)" stroke-width="0.05" />
+        <g class="measure-line">
+          <line :x1="measureLineCenter.x - 1/3" :y1="measureLineCenter.y"
+                :x2="measureLineLeft.x" :y2="measureLineLeft.y"
+                stroke="black" stroke-width="0.08" marker-end="url(#arrowhead)" />
+          <line :x1="measureLineCenter.x + 1/3" :y1="measureLineCenter.y"
+                :x2="measureLineRight.x" :y2="measureLineRight.y"
+                stroke="black" stroke-width="0.08" marker-end="url(#arrowhead)" />
+          <text fill="hsl(0, 50%, 50%)" text-anchor="middle"
+                :x="measureLineCenter.x" :y="measureLineCenter.y"
+                :font-size="0.4" font-weight="bold"
+                :dy="0.15">{{radius.toFixed(1)}}</text>
+        </g>
         <drag-handle v-model="centerPosition"
-                     color="hsl(60, 100%, 90%)" :size="0.3 * scale" />
+                     color="hsl(60, 100%, 90%)" :size="0.3" />
         <drag-handle v-model="radiusPosition"
-                     color="hsl(30 100% 80%)" :size="0.2 * scale" />
+                     color="hsl(30 100% 80%)" :size="0.2" />
       </svg>
       <figcaption>Circle with radius {{radius.toFixed(1)}}</figcaption>
     </figure>
