--- a/15/index.html
+++ b/15/index.html
@@ -32,7 +32,7 @@
             :r="radius * scale"
             fill="none" stroke="hsl(60 10% 50%)" />
         <drag-handle v-model="centerPosition"
-                     color="hsl(60, 100%, 90%)" :size="0.3 * scale" />
+                     color="hsl(60 100% 90%)" :size="0.3 * scale" />
         <drag-handle v-model="radiusPosition"
                      color="hsl(30 100% 80%)" :size="0.2 * scale" />
       </svg>
