--- a/19/index.html
+++ b/19/index.html
@@ -42,7 +42,7 @@
         <circle :cx="center.q" :cy="center.r" :r="radius"
             fill="none" stroke="hsl(60 10% 50%)" stroke-width="0.05" />
         <drag-handle v-model="centerPosition"
-                     color="hsl(60, 100%, 90%)" :size="0.3" />
+                     color="hsl(60 100% 90%)" :size="0.3" />
         <drag-handle v-model="radiusPosition"
                      color="hsl(30 100% 80%)" :size="0.2" />
       </svg>
