--- a/20/index.html
+++ b/20/index.html
@@ -63,7 +63,7 @@
         </g>
         
         <drag-handle v-model="centerPosition"
-                     color="hsl(60, 100%, 90%)" :size="0.3" />
+                     color="hsl(60 100% 90%)" :size="0.3" />
         <drag-handle v-model="radiusPosition"
                      color="hsl(30 100% 80%)" :size="0.2" />
       </svg>
