--- a/4/index.html
+++ b/4/index.html
@@ -12,7 +12,7 @@
         <rect v-for="{q, r} in positions"
               :x="q * scale + 1/2" :y="r * scale + 1/2"
               :width="scale-1" :height="scale-1"
-              fill="hsl(250, 10%, 93%)" />
+              fill="hsl(250 10% 93%)" />
       </svg>
     </figure>
   </body>
