Feat: simplify the initial diagrams and make contrast better
* Removed the Creative Commons footer, as it didn't add anything to
  the page and it doesn't reflect a footer I would actually use.
* Changed the initial diagrams to use a light gray background
  so that the square can be black/white.

--- a/1/index.html
+++ b/1/index.html
@@ -14,22 +14,11 @@
       This is a tutorial about circle drawing on a grid.
     </p>
     <figure id="diagram">
-      <svg viewBox="0 0 550 220">
+      <svg viewBox="0 0 550 220" style="background: lightgray">
       </svg>
     </figure>
-    <footer xmlns:dct="http://purl.org/dc/terms/"
-            xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
-      <a rel="license"
-         style="float:left;width:100px;margin-right:1em"
-         href="https://creativecommons.org/publicdomain/zero/1.0/">
-        <img src="https://i.creativecommons.org/p/zero/1.0/88x31.png"
-              style="border-style: none" alt="CC0" />
-      </a>
-      This page is in the
-      <a href="https://creativecommons.org/publicdomain/zero/1.0/">
-        public domain</a>.
-      Use it as you wish. Attribution is not necessary,
-      but appreciated.
+    <footer>
+      Last updated 1 Jan 2023.
     </footer>
   </body>
 </html>
