--- a/2/index.html
+++ b/2/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <figure id="diagram">
-      <svg viewBox="0 0 550 220">
+      <svg viewBox="0 0 550 220" style="background: lightgray">
         <rect
             x="0" y="0"
             width="22" height="22"
-            fill="white" stroke="gray" />
+            fill="white" stroke="black" />
       </svg>
     </figure>
   </body>
