--- a/3/index.html
+++ b/3/index.html
@@ -12,7 +12,7 @@
         <rect v-for="{q, r} in positions"
               :x="q * scale" :y="r * scale"
               :width="scale" :height="scale"
-              fill="white" stroke="gray" />
+              fill="white" stroke="black" />
       </svg>
     </figure>
   </body>
