Cleanup: move page-specific CSS into */index.html
For convenience I have */index.html including ./pagestyle.css.
The *intent* of this is to provide the formatting that's needed for
the main page, including iframe sizing. But some of the CSS rules
belong as part of the individual diagrams, so I've moved them.

--- a/1/index.html
+++ b/1/index.html
@@ -5,6 +5,9 @@
     <title>Circle drawing</title>
     <link rel="stylesheet" href="../pagestyle.css">
     <script type="module" src="circle-drawing.js"></script>
+    <style>
+        svg { display: block; background: lightgray; }
+    </style>
   </head>
   <body>
     <header>
@@ -14,7 +17,7 @@
       This is a tutorial about circle drawing on a grid.
     </p>
     <figure id="diagram">
-      <svg viewBox="0 0 550 220" style="background: lightgray">
+      <svg viewBox="0 0 550 220">
       </svg>
     </figure>
     <footer>
