--- a/18/index.html
+++ b/18/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="../pagestyle.css">
     <script type="module" src="circle-drawing.js"></script>
     <style>
-      #diagram-distances rect { stroke: white; stroke-width: 0.05px; }
-      #diagram-distances .inside rect { fill: hsl(60 10% 93%); }
-      #diagram-distances .outside rect { fill: hsl(250 10% 93%); }
-      #diagram-distances .inside text { fill: hsl(60 40% 20%); font-weight: bold; }
-      #diagram-distances .outside text { fill: hsl(250 20% 50%); }
+        figcaption { text-align: center; }
+        #diagram-distances rect { stroke: white; stroke-width: 0.05px; }
+        #diagram-distances .inside rect { fill: hsl(60 10% 93%); }
+        #diagram-distances .outside rect { fill: hsl(250 10% 93%); }
+        #diagram-distances .inside text { fill: hsl(60 40% 20%); font-weight: bold; }
+        #diagram-distances .outside text { fill: hsl(250 20% 50%); }
     </style>
   </head>
   <body>
