--- a/2/index.html
+++ b/2/index.html
@@ -5,10 +5,13 @@
     <title>Circle drawing</title>
     <link rel="stylesheet" href="../pagestyle.css">
     <script type="module" src="circle-drawing.js"></script>
+    <style>
+        svg { display: block; background: lightgray; }
+    </style>
   </head>
   <body>
     <figure id="diagram">
-      <svg viewBox="0 0 550 220" style="background: lightgray">
+      <svg viewBox="0 0 550 220">
         <rect
             x="0" y="0"
             width="22" height="22"
