--- a/3/index.html
+++ b/3/index.html
@@ -5,6 +5,9 @@
     <title>Circle drawing</title>
     <link rel="stylesheet" href="../pagestyle.css">
     <script type="module" src="circle-drawing.js"></script>
+    <style>
+        svg { display: block; }
+    </style>
   </head>
   <body>
     <figure id="diagram">
