--- a/7/index.html
+++ b/7/index.html
@@ -5,6 +5,10 @@
     <title>Circle drawing</title>
     <link rel="stylesheet" href="../pagestyle.css">
     <script type="module" src="circle-drawing.js"></script>
+    <style>
+      svg,figure>label { display: block; }
+      input { vertical-align: bottom; }
+    </style>
   </head>
   <body>
     <figure id="diagram">
