--- a/no-draggable/index.html
+++ b/no-draggable/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../pagestyle.css">
     <script type="module" src="circle-drawing.js"></script>
     <style>
+        figcaption { text-align: center; }
         .grid rect               { fill: white; stroke: hsl(250 10% 97%); stroke-width: 0.05px; }
         .grid.inside-bounds rect { fill: hsl(250 10% 93%); stroke: white; }
         .grid.inside-circle rect { fill: hsl(60 10% 93%); }
