Fix: tweak draggable handle to handle more cases
This is based on my research at
https://www.redblobgames.com/x/2251-draggable/

1. When text is selected, dragging will drag the text instead of my
   handle. Use @dragstart.prevent to stop that.
2. Right clicking to bring up the menu interferes with dragging
   the handle. Middle clicking to autoscroll also interferes with
   dragging the handle. Users generally expect only the left button
   should drag the handle, so use @pointerdown.left instead of
   @pointerdown. I still use @pointerup instead of @pointerup.left
   because of chording: left down, right down, left up, right up will
   produce pointerdown.left then pointerup.right, and I want the drag
   to stop either way. There's a better fix but this is the simplest.
3. There's no need to trigger pointermove after a pointerdown, so I
   removed that unnecessary line of code.

--- a/9/index.html
+++ b/9/index.html
@@ -21,10 +21,9 @@
                      : 'hsl(250 10% 93%)'"
         />
         <circle fill="yellow"
-                @touchstart.prevent=""
-                @pointerdown="pointerDown"
-                @pointerup="pointerUp"
-                @pointercancel="pointerUp"
+                @touchstart.prevent="" @dragstart.prevent=""
+                @pointerdown.left="pointerDown"
+                @pointerup="pointerUp" @pointercancel="pointerUp"
                 @pointermove="moveCenter"
                 :r="0.4 * scale"
                 :cx="(center.q + 1/2) * scale"
@@ -32,11 +31,11 @@
       </svg>
       <label>
         col = <input v-model.number="center.q"
-                   type="range" min="0" :max="gridCols-1" />
+                     type="range" min="0" :max="gridCols-1" />
       </label>
       <label>
         row = <input v-model.number="center.r"
-                   type="range" min="0" :max="gridRows-1" />
+                     type="range" min="0" :max="gridRows-1" />
       </label>
       <label>
         radius =
